# soc_sys_api

./: README.md
vwos-sok-develop/: .gitignore  CMakeLists.txt  README.md  conanfile.py  sample_sink.conanfile.py  sample_source.conanfile.py
vwos-sok-develop/.github/workflows/: mid-build.yml  mid-code-checks.yml
vwos-sok-develop/config/: config_participant_sink.json  config_server_source.json
vwos-sok-develop/deploy/: deploy.sh
vwos-sok-develop/doc/: README.md
vwos-sok-develop/doc/diagrams/: authentic_broadcast.puml  challenge-response.puml  class_diagram.puml  freshness_value_distribution.puml  fv_distribution_states_fvm-participant.puml
vwos-sok-develop/doc/diagrams/components/: sok_high_level.puml
vwos-sok-develop/doc/knowledge_documents/: README.md
vwos-sok-develop/include/: README.md
vwos-sok-develop/include/sok/common/: CommonDefinitions.hpp  CommonError.hpp  CsmAccessorAraCrypto.hpp  CsmAccessorCrypto.hpp  CsmAccessorDemo.hpp  ErrorOrObjectResult.hpp  ICsmAccessor.hpp  Logger.hpp  SokCommonInternalFactory.hpp  SokUtilities.hpp
vwos-sok-develop/include/sok/fvm/: AFreshnessValueManagerImpl.hpp  DiagnosticsHandler.hpp  FreshnessValueManager.hpp  FreshnessValueManagerConfigAccessor.hpp  FreshnessValueManagerConstants.hpp  FreshnessValueManagerDefinitions.hpp  FreshnessValueManagerError.hpp  FreshnessValueManagerImplParticipant.hpp  FreshnessValueManagerImplServer.hpp  FreshnessValueStateManager.hpp  FvmConfigParser.hpp  FvmConfigParserJsonSchema.hpp  FvmDiagnosticsDefinitions.hpp  FvmDiagnosticsError.hpp  FvmRuntimeAttributesManager.hpp  IFreshnessValueManagerConfigAccessor.hpp  IFvmDiagnosticsControl.hpp  IFvmDiagnosticsReader.hpp  IFvmDiagnosticsWriter.hpp  IFvmRuntimeAttributesManager.hpp  ISignalManager.hpp  SignalManagerSci.hpp  SokFmInternalFactory.hpp
vwos-sok-develop/rte/: sok_rte.conanfile.py
vwos-sok-develop/scripts/: README.md  build_sok_demo_rte.sh
vwos-sok-develop/src/: CMakeLists.txt  README.md
vwos-sok-develop/src/sok/: CMakeLists.txt
vwos-sok-develop/src/sok/common/: CsmAccessorAraCrypto.cpp  CsmAccessorCrypto.cpp  CsmAccessorDemo.cpp  SokCommonInternalFactory.cpp
vwos-sok-develop/src/sok/fvm/: AFreshnessValueManagerImpl.cpp  DiagnosticsHandler.cpp  FreshnessValueManager.cpp  FreshnessValueManagerConfigAccessor.cpp  FreshnessValueManagerImplParticipant.cpp  FreshnessValueManagerImplServer.cpp  FreshnessValueStateManager.cpp  FvmConfigParser.cpp  FvmRuntimeAttributesManager.cpp  SignalManagerSci.cpp  SokFmInternalFactory.cpp  fvm.cpp
vwos-sok-develop/tests/: CMakeLists.txt  README.md
vwos-sok-develop/tests/samples/: CMakeLists.txt
vwos-sok-develop/tests/samples/sok_demo/: CMakeLists.txt  README.md  SokDemo.cpp  SysDiagApiIdsSink.cpp  SysDiagApiIdsSource.cpp
vwos-sok-develop/tests/samples/sok_demo/deploy/: deploy.sh  secoc_config.json
vwos-sok-develop/tests/samples/sok_demo/model/design/: Application.arxml
vwos-sok-develop/tests/samples/sok_demo/sok_user_sample/: SokUserSample.cpp  SokUserSample.hpp
vwos-sok-develop/tests/samples/sok_demo/sok_user_sample/protobuf/: sok_demo_msg.proto
vwos-sok-develop/tests/unit/: CMakeLists.txt
vwos-sok-develop/tests/unit/common/: CsmAccessorDemoTest.cpp
vwos-sok-develop/tests/unit/fvm/: AFreshnessValueManagerImplTest.cpp  FreshnessValueManagerImplParticipantTest.cpp  FreshnessValueManagerImplServerTest.cpp  FreshnessValueStateManagerTest.cpp  FvmConfigParserTest.cpp  FvmRuntimeAttributesManagerTest.cpp  SignalManagerDemoTest.cpp
vwos-sok-develop/tests/unit/mock/: MockCsmAccessor.hpp  MockFreshnessValueManagerConfigAccessor.hpp  MockFvmRuntimeAttributesManager.hpp  MockSignalManager.hpp
